--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "date-fns": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
