--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
