--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-amap": "^4.0.2",
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
