--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
     "date-fns": "^2.29.1",
+    "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-amap": "^1.2.8",
